--- a/codenameone_settings.properties
+++ b/codenameone_settings.properties
@@ -1,18 +1,19 @@
 #
-#Tue May 01 18:32:57 CEST 2018
+#Sun May 06 13:51:28 CET 2018
 codename1.vendor=CodenameOne
 codename1.displayName=SoukMobile
 codename1.icon=icon.png
-codename1.arg.java.version=8
 codename1.languageLevel=5
+codename1.arg.java.version=8
 codename1.ios.debug.certificatePassword=
 codename1.secondaryTitle=CodenameOne_Template
 codename1.version=1.0
 codename1.mainName=MyApplication
 codename1.ios.certificatePassword=
 codename1.ios.release.provision=
-codename1.arg.ios.newStorageLocation=true
 codename1.rim.signtoolDb=
+codename1.arg.ios.newStorageLocation=true
+libVersion=212
 codename1.ios.release.certificatePassword=
 codename1.ios.certificate=
 codename1.j2me.nativeTheme=nbproject/nativej2me.res
@@ -24,6 +25,6 @@ codename1.ios.debug.certificate=
 codename1.android.keystore=
 codename1.android.keystoreAlias=
 codename1.rim.certificatePassword=
-codename1.ios.debug.provision=
 codename1.ios.provision=
+codename1.ios.debug.provision=
 codename1.packageName=com.mycompany.myapp
